# homework-21.2

./: pyproject.toml  veb_app.py
pages/: catalog.html  category.html  contacts.html  home.html
