[tool.poetry]
name = "homework-21-2"
version = "0.1.0"
description = ""
authors = ["Ataraksia <1509lisavi@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_21"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
